<resources>
    <string name="app_name">caount</string>

    <string name="meal_name">Meal Name</string>

    <string name="meal_name_hint">Enter meal or item name here</string>

    <string name="meal_amount">Meal Amount</string>
    <string name="meal_amount_hint">Enter meal or item amount in grams</string>

    <string name="meal_calories">Meal Calories</string>
    <string name="meal_calories_hint">Enter meal or item calories per 100 grams</string>

    <string name="meal_proteins">Meal Proteins</string>
    <string name="meal_proteins_hint">Enter meal or item proteins per 100 grams</string>

    <string name="meal_carbs">Meal Carbs</string>
    <string name="meal_carbs_hint">Enter meal or item carbs per 100 grams</string>

    <string name="meal_fat">Meal Fats</string>
    <string name="meal_fat_hint">Enter meal or item fats per 100 grams</string>

    <string name="add_meal_button">Add meal or item ot DB</string>

    <string name="progress">Progress</string>
    <string name="add_meal">Add Meal</string>
</resources>