<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.view.fragments.AddMealFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mealNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginStart="@dimen/margin_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/mealNameEditText"
            android:text="@string/meal_name"
            />

        <EditText
            android:id="@+id/mealNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/spacing_between_elements"
            android:layout_marginRight="@dimen/margin_left"
            android:hint="@string/meal_name_hint"
            android:inputType="text"
            android:minHeight="@dimen/element_min_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mealNameTextView" />

        <TextView
            android:id="@+id/amountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_between_elements"
            android:layout_marginStart="@dimen/margin_left"
            app:layout_constraintTop_toBottomOf="@id/mealNameEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/amountEditText"
            android:text="@string/meal_amount"
            />

        <EditText
            android:id="@+id/amountEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/spacing_between_elements"
            android:layout_marginRight="@dimen/margin_left"
            android:hint="@string/meal_amount_hint"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/element_min_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/amountTextView" />

        <TextView
            android:id="@+id/caloriesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_between_elements"
            android:layout_marginStart="@dimen/margin_left"
            app:layout_constraintTop_toBottomOf="@id/amountEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/caloriesEditText"
            android:text="@string/meal_calories"
            />

        <EditText
            android:id="@+id/caloriesEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/spacing_between_elements"
            android:layout_marginRight="@dimen/margin_left"
            android:hint="@string/meal_calories_hint"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/element_min_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/caloriesTextView" />

        <TextView
            android:id="@+id/proteinsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_between_elements"
            android:layout_marginStart="@dimen/margin_left"
            app:layout_constraintTop_toBottomOf="@id/caloriesEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/proteinsEditText"
            android:text="@string/meal_proteins"
            />

        <EditText
            android:id="@+id/proteinsEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/spacing_between_elements"
            android:layout_marginRight="@dimen/margin_left"
            android:hint="@string/meal_proteins_hint"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/element_min_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/proteinsTextView" />

        <TextView
            android:id="@+id/carbsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_between_elements"
            android:layout_marginStart="@dimen/margin_left"
            app:layout_constraintTop_toBottomOf="@id/proteinsEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/carbsEditText"
            android:text="@string/meal_carbs"
            />

        <EditText
            android:id="@+id/carbsEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/spacing_between_elements"
            android:layout_marginRight="@dimen/margin_left"
            android:hint="@string/meal_calories_hint"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/element_min_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carbsTextView" />

        <TextView
            android:id="@+id/fatsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_between_elements"
            android:layout_marginStart="@dimen/margin_left"
            app:layout_constraintTop_toBottomOf="@id/carbsEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fatsEditText"
            android:text="@string/meal_fat"
            />

        <EditText
            android:id="@+id/fatsEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginTop="@dimen/spacing_between_elements"
            android:layout_marginRight="@dimen/margin_left"
            android:hint="@string/meal_fat_hint"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/element_min_height"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fatsTextView" />

        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/element_min_height"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_marginRight="@dimen/margin_left"
            android:layout_marginTop="@dimen/spacing_between_elements"
            app:layout_constraintTop_toBottomOf="@id/fatsEditText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/add_meal_button"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>